--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "dependencies": {
-    "json-server": "^0.17.0"
-  },
   "name": "data",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "start": "json-server --watch -p 3333 server.json"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "json-server": "^0.17.1"
+  }
 }
